BD-585: Preliminary Apache Livy integration
new plugin: org.knime.bigdata.spark.core.livy
temporary context creator node: Create Spark Context (Livy)

BD-585 (Rebase Livy branch onto current master)